@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2002/12/22 19:04:08 jlam Exp $
+# $NetBSD: Makefile,v 1.15 2003/01/10 08:44:19 jlam Exp $
 #
 
 .include "../libtool/Makefile.common"
@@ -15,21 +15,47 @@ test: build
 
 .include "../../mk/bsd.prefs.mk"
 
-.if ${MACHINE_PLATFORM:MNetBSD-1.4-sparc} != "" || \
-	${MACHINE_PLATFORM:MNetBSD-1.4.[12]-sparc} != ""
+.if !empty(MACHINE_PLATFORM:MNetBSD-1.4-sparc) || \
+    !empty(MACHINE_PLATFORM:MNetBSD-1.4.[12]-sparc)
 DEPENDS+=	c++rt0>=1.0:../../sysutils/c++rt0
 .endif
 
 .if ${OPSYS} == "NetBSD"
 .  if !exists(/usr/libexec/ld.so) && !exists(/usr/libexec/ld.elf_so)
-CONFIGURE_ARGS=	--disable-shared
+CONFIGURE_ARGS=		--disable-shared
+BUILD_SHLIBTOOL=	NO
 .  endif
 .else
-CONFIGURE_ARGS=	--enable-ltdl-install
+CONFIGURE_ARGS=		--enable-ltdl-install
 .endif
 
 .if !empty(MACHINE_PLATFORM:MDarwin-*-*)
 .  include "../../devel/dlcompat/buildlink2.mk"
+.endif
+
+BUILD_SHLIBTOOL?=	YES
+BUILDING_SHLIBTOOL?=	NO
+
+.if ${BUILDING_SHLIBTOOL} == "YES"
+CONFIGURE_ARGS+=	--disable-static
+.else
+SHLIBTOOL_WRKDIR=	${WRKDIR}/shlibtool
+SHLIBTOOL_WRKSRC=	${WRKSRC:S/${WRKDIR}/${SHLIBTOOL_WRKDIR}/}
+SHLIBTOOL_MAKEFLAGS=	BUILDING_SHLIBTOOL=YES
+SHLIBTOOL_MAKEFLAGS+=	WRKDIR=${SHLIBTOOL_WRKDIR}
+
+.  if ${BUILD_SHLIBTOOL} == "NO"
+PLIST_SUBST+=		SHLIBTOOL="@comment "
+.  else
+PLIST_SUBST+=		SHLIBTOOL=
+
+post-build:
+	cd ${.CURDIR} && ${MAKE} build ${SHLIBTOOL_MAKEFLAGS}
+
+post-install:
+	${INSTALL_SCRIPT} ${SHLIBTOOL_WRKSRC}/libtool			\
+		${PREFIX}/bin/shlibtool
+.  endif
 .endif
 
 .include "../../mk/bsd.pkg.mk"
