@@ -1,6 +1,7 @@
-@comment $NetBSD: PLIST,v 1.3 2002/12/09 16:01:19 tron Exp $
+@comment $NetBSD: PLIST,v 1.4 2003/01/10 08:44:19 jlam Exp $
 bin/libtool
 bin/libtoolize
+${SHLIBTOOL}bin/shlibtool
 include/ltdl.h
 lib/libltdl.a
 lib/libltdl.la
