@@ -186,3 +186,6 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated p5-pilot-link to 0.11.7 [rh 2003-01-10]
 	Updated jpilot to 0.99.3 [rh 2003-01-10]
 	Added gob-1.0.12 [rh 2003-01-10]
+	Updated libtool to 1.4.20010614nb11 [jlam 2003-01-10]
+	Updated libtool-base to 1.4.20010614nb11 [jlam 2003-01-10]
+	Updated libtool-info to 1.4.20010614nb11 [jlam 2003-01-10]
